# Car_control_Raspberry

./: .gitignore  .gitmodules  CI_CD.yml  CMakeLists.txt  README.md  socketCAN.md
.github/workflows/: CI_CD.yml  unit_tests.yml
Car_control/: CMakeLists.txt  Doxyfile
Car_control/docs/: latencyTestDoc.md
Car_control/include/: CANController.hpp  CANProtocol.hpp  CarDataCommunication.hpp  Joystick.hpp  carControl.h  socketCAN.h
Car_control/srcs/: main.cpp
Car_control/srcs/can/: CANController.cpp  canReceiver.cpp  canReceiver_thread.cpp  socketCAN.c
Car_control/srcs/communication/: CarDataCommunication.cpp  CarDataCommunication.hpp  CarDataSender.cpp  CarDataSender.hpp  qDataStream.cpp
Car_control/srcs/controller/: Joystick.cpp
Car_control/srcs/core/: autonomous_mode.cpp  heartbeat.cpp  manual_mode.cpp  monitoring_thread.cpp
Car_control/srcs/init/: init.cpp  init_can.cpp
Car_control/srcs/utils/: canRxParsing.cpp  inputParsing.cpp  joy_axis.cpp  parsing.cpp  signal.cpp  temp_print_can_rx.cpp  threadSafeUtils.cpp
Car_control/tests/: CANControllerTest.cpp  CANInitTest.cpp  CANProtocolTest.cpp  JoystickTest.cpp  SocketCANTest.cpp  autonomousModeTest.cpp  initTest.cpp  manualModeTest.cpp  parsingTest.cpp  signalTest.cpp  threadSafeUtilsTest.cpp
Car_control/tests/latencyTest/: latencyAverageCalculator.sh
Dashboard/: .gitignore  CMakeLists.txt  Dashboard.pro  SOCKET_DATA.md  qml.qrc  send_test_data.py
Dashboard/docs/: ALBUM_ART.md  SOCKET_DATA.md
Dashboard/incs/: CarDataController.hpp  CoverArtProvider.hpp  Dashboard.hpp  DashboardMacros.hpp
Dashboard/songs/: bash.sh
Dashboard/srcs/: CarDataController.cpp  CoverArtProvider.cpp  Dashboard.cpp  Main.qml  main.cpp  main.qml
Dashboard/srcs/BotRow/: BotRow.qml
Dashboard/srcs/CenterDisplay/: BatteryInfo.qml  CenterDisplay.qml  MotorState.qml  SpeedInfo.qml  SpeedLimit.qml
Dashboard/srcs/ErrorDisplay/: ErrorOverlay.qml
Dashboard/srcs/LeftDisplay/: GridCanvas.qml  LeftDisplay.qml  RoadCanvas.qml
Dashboard/srcs/RightDisplay/: MusicPlayer.qml  RightDisplay.qml  Settings.qml
Dashboard/srcs/TopRow/: TopCenter.qml  TopLeft.qml  TopRight.qml  TopRow.qml
Dashboard/tests/: CMakeLists.txt  test_CarDataController.cpp  test_CoverArtProvider.cpp  test_ServerCommunication.cpp  test_dashboard.cpp
Qt/srcs/: Gauge.qml
SimpleQt/: SOCKET_DATA.md  SimpleQt.pro  car_data_server_qdatastream.py  qml.qrc  sender_example.cpp
SimpleQt/incs/: CarDataController.hpp
SimpleQt/srcs/: CarDataController.cpp  Dashboard.cpp  Main.qml  main.cpp
SimpleQt/srcs/CenterDisplay/: BatteryInfo.qml  CenterDisplay.qml
include/: CANController.hpp  CANProtocol.hpp  Joystick.hpp  carControl.h  exceptions.hpp  joyStick.hpp  sdl.h  socketCAN.h
scripts/: install_GoogleTest.sh  install_doxygen.sh  install_lcov.sh  install_libevdev.sh  install_sdl2.sh  send_test_data.py
srcs/: main.cpp
srcs/can/: CANController.cpp  socketCAN.c
srcs/can_fd/: CANController.cpp  main.c  main.cpp  socketCAN.c
srcs/controller/: Joystick.cpp  joyStick.cpp  joystick.cpp
srcs/core/: manual_mode.cpp
srcs/exit/: exitCleanups.cpp  signals.cpp
srcs/init/: init.cpp  init_can.cpp  init_car_i2c.cpp  init_joystick.cpp
srcs/utils/: math_utils.cpp  parsing.cpp
tests/: CANControllerTest.cpp  CANInitTest.cpp  CANProtocolTest.cpp  CarControlTest.cpp  JoyTest.cpp  JoystickTest.cpp  SocketCANTest.cpp  carControlTest.cpp  joyStickTest.cpp  main.cpp  main.py  socketCANTest.cpp
tmp/: JoystickTest.cpp
